# orderprocessingsystem

./: README.md  pyproject.toml
frontend/: index.html
src/order_service/: main.py
src/order_service/event_processors/: __init__.py  base_processor.py  payment_failed_processor.py  processor_registry.py
src/order_service/exceptions/: __init__.py  order_exception.py
src/order_service/handlers/: __init__.py  order_handler.py
src/order_service/models/: __init__.py  order.py  ticket.py
src/order_service/repositories/: __init__.py
src/order_service/repositories/implementation/: __init__.py  order_repository.py  ticket_repository.py
src/order_service/repositories/interfaces/: __init__.py  interfaces.py
src/order_service/services/: order_service.py
src/order_service/state_machine/: __init__.py  order_state_machine.py
tests/integration/: test_order_handler.py
tests/unit/: test_models.py  test_order_repository.py  test_order_service.py  test_payment_failed_processor.py  test_state_machine.py
